--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste Food</title>
+    <link rel="stylesheet" href="./styles.css">
     <script src="./App.js" type="module"></script>
 </head>
 <body>
