--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste Food</title>
-    <link rel="stylesheet" href="./styles.css">
-    <script src="./App.js" type="module"></script>
+    <link rel="stylesheet" href="./index.css">
+    <script src="./src/App.js" type="module"></script>
 </head>
 <body>
-    <h1>Welcome to Namaste Food Oredering</h1>
+    <h1 class="hardcode">Welcome to Namaste Food Oredering- this is a plain html row</h1>
+    <div id="root">
+       
+    </div>
 </body>
 </html>
