--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste Food</title>
     <link rel="stylesheet" href="./index.css">
-    <script src="./src/App.js" type="module"></script>
+    <script src="App.js" type="module"></script>
 </head>
 <body>
     <h1 class="hardcode">Welcome to Namaste Food Oredering- this is a plain html row</h1>
